--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>CHARLY TURISMO</title>   
     <link rel="shortcut icon" href="img/charly-logo.png" type="image/png">
 </head>
-
 <body>
     <nav class="navbar">
         <h1 class="logo">CHARLY TURISMO</h1>
@@ -18,9 +17,8 @@
             <li><a href="#"></a>Tours</li>
             <li><a href="#"></a>Explorar</li>
             <li><a href="#"></a>Sobre Nosotros</li>
-            <li class="ctn"><a href="#"></a>Contacto</li>
+            <li href="#"><a href="#"></a>Contacto</li>
         </ul>
-        <img src="img/menu-btn.png" alt="" class="menu-btn">
     </nav>
 
     <header>
@@ -87,15 +85,6 @@
         <p>Buenos Aires - Argentina | Teléfono: 3364018259 | Email: charly_turismo@gmail.com</p>
         <p>Derechos de autor © 2024 CHARLY Turismo</p>
     </section>
-
-    <script>
-        const menuBtn = document.querySelector('.menu-btn')
-        const navlinks = document.querySelector('.nav-links')
-
-        menuBtn.addEventListener('click', () => {
-            navlinks.classList.toggle('mobile-menu')
-        })
-    </script>
 
 </body>
 </html>
