--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <link rel="shortcut icon" href="img/charly-logo.png" type="image/png">
 </head>
 <body>
-    <nav class="navbar">
-        <h1 class="logo">CHARLY TURISMO</h1>
-        <ul class="nav-links">
-            <li class="active"><a href="#"></a>Página Principal</li>
-            <li><a href="#"></a>Tours</li>
-            <li><a href="#"></a>Explorar</li>
-            <li><a href="#"></a>Sobre Nosotros</li>
-            <li href="#"><a href="#"></a>Contacto</li>
-        </ul>
-    </nav>
-
+    <input type="checkbox" id="toggle-navbar" />
+<label for="toggle-navbar" class="abrir-navbar" data-open="☰" data-close="✖"></label>
+<nav class="navbar">
+    <h1 class="logo">CHARLY TURISMO</h1>
+    <ul class="nav-links">
+        <li class="active"><a href="#">Página Principal</a></li>
+        <li><a href="#">Tours</a></li>
+        <li><a href="#">Explorar</a></li>
+        <li><a href="#">Sobre Nosotros</a></li>
+        <li><a href="#">Contacto</a></li>
+    </ul>
+</nav>
+<main class="contenido"></main>
     <header>
         <div class="header-content">
             <h2>Tu próximo destino esta en CHARLY!</h2>
